--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 14 21:38:31 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.decl (report): reintroduced tee(1) to preserve output
+	during report generation, but use $PIPESTATUS to ensure successful
+	execution of the subshell commands.
+
 Thu Dec 14 02:37:04 2006  Tim Janik  <timj@gtk.org>
 
 	* Makefile.decl (report): fix report rule so that failure exit
