--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+- varify that all C plugins call update_modules after module creation
+- add quantizer
 - acbeast.m4 -> acbirnet.m4
 - bsemathsignal.c -> bsemathsignal.cc
 - change midi events to either list note + fine_tune instead of frequency, or at least preserve notes
