--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 14 22:10:26 2006  Tim Janik  <timj@gtk.org>
+
+	* davorgan.c (dav_organ_init): 
+	* davxtalstrings.c (dav_xtal_strings_init): fix missing initialization 
+	of transpose_factor, fix found by Stefan.
+
 Mon Dec 11 00:51:36 2006  Tim Janik  <timj@gtk.org>
 
 	* bsesequencer.c:
