--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,10 @@
+Fri Dec 15 21:54:21 2006  Tim Janik  <timj@gtk.org>
+
+	* bsequantizer.idl: use quantizer.png as icon.
+
+	* icons/quantizer.png:
+	* icons/quantizer.xcf: changed to updated version by Hanno Behrens.
+
 Fri Dec 15 21:47:54 2006  Tim Janik  <timj@gtk.org>
 
 	* icons/quantizer.xcf: added icon by Hanno Behrens <pebbles@schattenlauf.de>.
