--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 16 01:54:05 2006  Tim Janik  <timj@gtk.org>
+
+        * released beast 0.7.1-rc1.
+
 Fri Dec 15 18:21:46 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkutils.c (popup_menus_detach): fixed menu_list type
