--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Dec 16 19:45:18 2006  Tim Janik  <timj@gtk.org>
+
+	* updated version to 0.7.1-rc2, interface age 0, binary age 0.
+
+	* acbeast.m4: moved to birnet/.
+
 Sat Dec 16 01:54:05 2006  Tim Janik  <timj@gtk.org>
 
         * released beast 0.7.1-rc1.
