--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 17 02:16:50 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/strings.cc: glib condition fix, g_unichar_iswide_cjk()
+	was introduced in glib-2.12.
+
 Sun Dec 17 00:11:24 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetutils.[hc]*: provide virtual destructor for class with virtual
