--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 17 20:58:40 2006  Tim Janik  <timj@gtk.org>
+
+	* bsestandardosc.c (bse_standard_osc_update_modules): added missing 
+	update of the transpose factor to update_modules(), fixes #386862.
+
 Thu Dec 14 23:07:16 2006  Tim Janik  <timj@gtk.org>
 
 	* gslcommon.c (gsl_error_from_errno): special case ENODATA, which is not
