--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jan 04 20:29:24 2007  Tim Janik  <timj@gtk.org>
+
+	* mksignals.sh: changed script inetrpreter to /bin/bash to account
+	for bash-isms.
+
 Sun Dec 17 02:16:50 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/strings.cc: glib condition fix, g_unichar_iswide_cjk()
