--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 04 21:12:19 2007  Tim Janik  <timj@gtk.org>
+
+	* tests/filecheck/Makefile.am: get rid of tmeporary file warnings.
+
 Thu Dec 28 01:18:46 2006  Tim Janik  <timj@gtk.org>
 
 	* web/news.doxi: 0.7.0 release announcement.
