--- a/doxer/ChangeLog
+++ b/doxer/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan  5 00:54:29 2007  Tim Janik  <timj@gtk.org>
+
+	* qxmlparser.py (DoxygenXMLParser.parse_field): ignore
+	autognenerated field names for anonymous structs or unions.
+
 Mon Oct 23 01:07:55 2006  Tim Janik  <timj@gtk.org>
 
 	* Code2Doxi.py: escape commas in urls. 
