TODO updates (tags)
svn path=/trunk/; revision=4222

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- re-insert old tags BEAST_0_7_0 BEAST_0_7_1_rc1 BEAST_0_7_1
 - add SCM version info to report.out
 - fix block-independence of bsenoise
 - fix bsenoise distributions
