TODO updates (noise)
svn path=/trunk/; revision=4223

--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 - re-insert old tags BEAST_0_7_0 BEAST_0_7_1_rc1 BEAST_0_7_1
 - add SCM version info to report.out
-- fix block-independence of bsenoise
-- fix bsenoise distributions
+- fix block-dependence of bsenoise, i.e. non-noisy distributions
 - WEB: add? usability page: http://www.developerfusion.co.uk/show/1718/5/
 - WEB: add: "We will only accept OGG or MP3 files for already uploaded BSE files"
 - in API and docs, s/roots/zeros/
