--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 17 02:19:56 2007  Tim Janik  <timj@gtk.org>
+
+	* COPYING.LGPL: explicitely include Birnet license, GNU LGPL.
+
 Thu Jan  4 21:53:56 2007  Tim Janik  <timj@gtk.org>
 
 	* birnetthread.hh:
