--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan 17 02:28:18 2007  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: define _BIRNET_SOURCE_EXTENSIONS, so birnet extensions
+	can be used internally.
+
 Wed Jan 17 02:19:56 2007  Tim Janik  <timj@gtk.org>
 
 	* COPYING.LGPL: explicitely include Birnet license, GNU LGPL.
