added a small script to set up an example project that configures, builds
Wed Jan 17 02:30:35 2007 Tim Janik <timj@gtk.org>

        * examples/mkhost.sh: added a small script to set up an example project
        that configures, builds and tests (via make check) a birnet/ subdir.

svn path=/trunk/; revision=4238

--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan 17 02:30:35 2007  Tim Janik  <timj@gtk.org>
+
+	* examples/mkhost.sh: added a small script to set up an example project
+	that configures, builds and tests (via make check) a birnet/ subdir.
+
 Wed Jan 17 02:28:18 2007  Tim Janik  <timj@gtk.org>
 
 	* Makefile.am: define _BIRNET_SOURCE_EXTENSIONS, so birnet extensions
